-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 1.3.85 (2.0.0-rc1), Qt Creator 3.0.0-rc1, Qt Creator 4.3.0
-
None
For example, it wrong highlights usage signals in boost::signals namespace with error "expected declaration" ('signals' highlighted as keyword, line underlined with red):
boost::signals::connection c = signal.connect(obj);
Option in the project settings, autodetection (by included headers for example), or both are good solutions, IMHO.
- replaces
-
QTCREATORBUG-10322 Incorrect Error Highlighting in Qt Creator / Non-qt projects
-
- Closed
-
-
QTCREATORBUG-11568 qtcreator treats "slots" as keyword
-
- Closed
-
-
QTCREATORBUG-8196 SIGNAL keyword in non-qt project
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-1478 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
212406,2 | CppTools: Disable Qt keywords for C files | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
212417,2 | CppTools: Fix initial macro parsing for generic project | 4.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |