CppTools: Disable Qt keywords for C files

Task-number: QTCREATORBUG-1478
Change-Id: I29afc0f38e5f86ca2c30d5b6551974df68ee7512
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>